fix lỗi champ tier